--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "github-webhook": "bin/github-webhook.js"
   },
   "scripts": {
+	  "bundle": "zip -r lambdas.zip lamabdas",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
@@ -12,16 +13,17 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
+    "@types/node": "^10.17.27",
+    "aws-cdk": "2.12.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "2.12.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "aws-cdk-lib": "2.12.0",
     "constructs": "^10.0.0",
+    "node-fetch": "^3.2.0",
     "source-map-support": "^0.5.16"
   }
 }
